--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,8 +5,11 @@
 @use "components/buttons";
 @use "components/hero";
 @use "components/form";
+@use "components/custom";
 @use "utilities/mixins";
 
 body {
-  font-family: sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+  line-height: 1.6;
+  color: #333;
 }
