--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,6 +2,10 @@
   background-color: #ffffff;
   border-bottom: 1px solid #eaeaea;
   padding: 1rem 0;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
   .container {
     display: flex;
@@ -9,22 +13,48 @@
     align-items: center;
   }
 
+  .logo-link {
+    display: block;
+  }
+
   .logo {
     height: 48px;
+    width: auto;
   }
 
   .nav-list {
     display: flex;
     gap: 1.5rem;
     list-style: none;
+    margin: 0;
+    padding: 0;
 
     a {
       text-decoration: none;
       color: #333;
       font-weight: 500;
+      position: relative;
+      padding-bottom: 5px;
 
-      &:hover {
+      &:hover,
+      &.active {
         color: #007acc;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #007acc;
+        transition: width 0.3s ease;
+      }
+
+      &:hover:after,
+      &.active:after {
+        width: 100%;
       }
     }
   }
