--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,6 +3,8 @@
   color: white;
   padding: 3rem 0;
   text-align: center;
+  justify-content: center;
+  align-items: center;
 
   .footer-content {
     display: flex;
