--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @use "components/footer";
 @use "components/pages";
 @use "utilities/mixins";
+@use "components/hero-backgrounds";
 
 body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
@@ -29,14 +30,32 @@ body {
   h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
-    color: #1a202c;
+    color: #e7e7e8;
   }
 
   .lead {
     font-size: 1.25rem;
-    color: #4a5568;
+    color: #d3d3d3;
     max-width: 700px;
     margin: 0 auto 2rem;
+  }
+
+  .hero-home {
+    padding: 5rem 0 3rem;
+    text-align: center;
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      color: #211919;
+    }
+
+    .lead-home {
+      font-size: 1.25rem;
+      color: #141010;
+      max-width: 700px;
+      margin: 0 auto 2rem;
+    }
   }
 }
 
